2009-10-20  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Set debug id for contexts of isolated worlds to distinguish them in debugger.

        https://bugs.webkit.org/show_bug.cgi?id=30559

        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::evaluateInIsolatedWorld):
        (WebCore::V8Proxy::evaluateInNewContext):
        (WebCore::V8Proxy::setInjectedScriptContextDebugId):
        * bindings/v8/V8Proxy.h:

2009-10-20  Andras Becsi  <becsi.andras@stud.u-szeged.hu>

        Unreviewed buildfix.
        [Qt] Add FEGaussianBlur.h and FEGaussianBlur.cpp which were refactored in r49778 to WebCore.pro.

        * WebCore.pro:

2009-10-20  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by David Levin.

        Set EnabledAtRuntime for WebSocket in DOMWindow
        https://bugs.webkit.org/show_bug.cgi?id=29896

        Supported by chromium/v8 only.
        Add WebSocket::isAvailable()/setIsAvailable(bool) to control v8
        bindings.
        Remove Settings::experimentalWebSocketsEnabled() and
        setExperimentalWebSocketsEnabled(bool).

        * WebCore.base.exp:
        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::webSocket):
        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::getConstructor):
        * bindings/v8/custom/V8CustomBinding.h:
        * bindings/v8/custom/V8DOMWindowCustom.cpp:
        (WebCore::ACCESSOR_RUNTIME_ENABLER):
        * page/DOMWindow.idl:
        * page/Settings.cpp:
        (WebCore::Settings::Settings):
        * page/Settings.h:
        * websockets/WebSocket.cpp:
        (WebCore::WebSocket::setIsAvailable):
        (WebCore::WebSocket::isAvailable):
        * websockets/WebSocket.h:

2009-10-19  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam Weinig.

        REGRESSION: Dromaeo DOM test is 14% slower
        https://bugs.webkit.org/show_bug.cgi?id=30273
